# rust-high-performance-data-processing

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
benches/: data_processing_benchmark.rs
diagrams/: rust_data_processing.mmd
docs/: ARCHITECTURE.md  AUDIT_SUMMARY.md  PERFORMANCE_GUIDE.md
scripts/: build_and_test.sh  run_benchmarks.sh
src/: lib.rs  main.rs
src/csv_processing/: mod.rs
tests/: integration_tests.rs
