[package]
name = "rust-high-performance-data-processing"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Demetrios Lafis"]
license = "MIT"
description = "High-performance data processing examples and benchmarks using Rust"
repository = "https://github.com/galafis/rust-high-performance-data-processing"
keywords = ["data-processing", "performance", "csv", "benchmark"]
categories = ["data-structures", "algorithms"]

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
criterion = "0.5"

[[bench]]
name = "data_processing_benchmark"
harness = false

